# telegram-ai-agent

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  streamlit_app.py
examples/: function_calling_example.py  member_download_and_outbound.py  multi_recipient_agent.py  two_agents_warmup.py  usage_example.py
scripts/: push_to_pypi.sh  push_to_testpypi.sh  run_precommit.sh  setup_precommit.sh
streamlit_app/: Home.py  app.py
streamlit_app/pages/: 1_ 🔐_Accounts.py  1_Accounts.py  2_💬_Chats.py  3_Segments.py  3_👥_Segments.py  4_Campaigns.py  4_📢_Campaigns.py  5_Assistants.py  5_🤖_Assistants.py  6_🎮_Playground.py
streamlit_app/utils/: agent_factory.py  assistant_factory.py  auth_utils.py  campaign_sender.py  database.py  logging_utils.py
streamlit_app/utils/database/: __init__.py  agent_process.py  assistant.py  campaigns.py  models.py  segment.py  session.py  telegram_config.py
telegram_ai_agent/: __init__.py  agent.py  auth.py  config.py  inbound.py  messages_handler.py  outbound.py  session.py  tools.py  utils.py
tests/: test_agent.py
